PR/50195: Henning Petersen: Incorrect check in getnameinfo_link.